--- a/prelimtrends/index.html
+++ b/prelimtrends/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Agents</title>
-    <link rel="stylesheet" href="/prelimtrends/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div id="searchbar">  <h1>Valorant Agents</h1>
